Fixed sizes of heatmaps in detail view of compare view. Some other minor fixes.
git-svn-id: svn://localhost:8080/caleydo_main/trunk@3002 1f7349ae-fd9f-0d40-aeb8-9798e6c0fce3